update versions in README