@@ -2,6 +2,7 @@
 Repository providing the docker image
 
 ## Versions 
+
 ### CVC4
 
 ```
@@ -52,14 +53,66 @@ all binaries) for the full CVC4 copyright, licensing, and (lack of)
 warranty information.
 ```
 
+### CVC5
+
+```
+This is cvc5 version 1.0.2 [git tag 1.0.2 branch HEAD]
+compiled with GCC version 9.4.0
+on Aug 26 2022 17:13:12
+
+Copyright (c) 2009-2022 by the authors and their institutional
+affiliations listed at https://cvc5.github.io/people.html
+
+cvc5 is open-source and is covered by the BSD license (modified).
+
+THIS SOFTWARE IS PROVIDED AS-IS, WITHOUT ANY WARRANTIES.
+USE AT YOUR OWN RISK.
+
+cvc5 incorporates code from ANTLR3 (http://www.antlr.org).
+See licenses/antlr3-LICENSE for copyright and licensing information.
+
+This version of cvc5 is linked against the following non-(L)GPL'ed
+third party libraries.
+
+  CaDiCaL - Simplified Satisfiability Solver
+  See https://github.com/arminbiere/cadical for copyright information.
+
+  Editline Library
+  See https://thrysoee.dk/editline
+  for copyright information.
+
+  SymFPU - The Symbolic Floating Point Unit
+  See https://github.com/martin-cs/symfpu/tree/cvc5 for copyright information.
+
+This version of cvc5 is linked against the following third party
+libraries covered by the LGPLv3 license.
+See licenses/lgpl-3.0.txt for more information.
+
+  GMP - Gnu Multi Precision Arithmetic Library
+  See http://gmplib.org for copyright information.
+
+  LibPoly polynomial library
+  See https://github.com/SRI-CSL/libpoly for copyright and
+  licensing information.
+
+cvc5 is statically linked against these libraries. To recompile
+this version of cvc5 with different versions of these libraries
+follow the instructions on https://github.com/cvc5/cvc5/blob/main/INSTALL.md
+
+See the file COPYING (distributed with the source code, and with
+all binaries) for the full cvc5 copyright, licensing, and (lack of)
+warranty information.
+
+```
+
 ### mathsat
 ```
-MathSAT5 version 5.6.6 (218275631c24) (Apr 23 2021 07:55:22, gmp 6.1.2, gcc 7.5.0, 64-bit)
-``` 
+MathSAT5 version 5.6.8 (27814677e16f) (Jun 28 2022 16:54:05, gmp 6.1.2, gcc 6.3.0, 64-bit)
 
 ### princess
 
 ```
+OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
 ________       _____
 ___  __ \_________(_)________________________________
 __  /_/ /_  ___/_  /__  __ \  ___/  _ \_  ___/_  ___/
@@ -67,9 +120,9 @@ _  ____/_  /   _  / _  / / / /__ /  __/(__  )_(__  )
 /_/     /_/    /_/  /_/ /_/\___/ \___//____/ /____/
 
 A Theorem Prover for First-Order Logic modulo Linear Integer Arithmetic
-(2021-05-10)
+(2022-07-01)
 
-(c) Philipp Rümmer, 2009-2021
+(c) Philipp Rümmer, 2009-2022
 Contributors: Angelo Brillout, Peter Backeman, Peter Baumgartner, Zafer Esen.
 Free software under BSD-3-Clause.
 Bug reports to ph_r@gmx.net
@@ -100,14 +153,16 @@ Standard options:
                            (quantifier elimination for PA formulae) (default: -)
  -clausifier=val           Choose the clausifier (none, simple)  (default: none)
  [+-]genTotalityAxioms     Generate totality axioms for functions   (default: +)
-``` 
+```
 
 ### vampire
+
 ```
 Vampire 4.5.1 (commit 57a6f78c on 2020-07-15 11:59:04 +0200)
-``` 
+```
 
 ### yices2
+
 ```
 Yices 2.6.2
 Copyright SRI International.
@@ -120,5 +175,6 @@ Revision: 22dfac2948d0b41edd8b70fe5f66976cdb19ebe6
 
 ### z3
 ```
-Z3 version 4.8.10 - 64 bit
+Z3 version 4.11.2 - 64 bit
 ```
+
